tests/derivation/core/norec t-pi--.. noext 004/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Usupported applications to a non-concrete type `a`

DerivedGen:1
 15 |   show (X0 b1 b2 _) = "X0 \{show b1} \{show b2} Refl"
 16 |   show X1           = "X1"
 17 | 
 18 | checkedGen : Fuel -> (b1 : Bool) -> (b2 : Bool) -> Gen MaybeEmpty (X b1 b2)
 19 | checkedGen = deriveGen
                   ^^^^^^^^^

